[package]
name = "server"
version = "0.1.0"
authors = ["SickanK <sixtenklementsson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3"
uuid = { version = "0.8", features = ["v4", "serde"] }
